copy edits to posts/2020-10-01.md

--- a/posts/2020-10-01.md
+++ b/posts/2020-10-01.md
@@ -3,7 +3,7 @@ title: "Fall Playlist"
 date: "2020-10-01"
 ---
 
-<p>Most music publications are being spoonfed the same (mostly) overrated new music, very few have genuinely good taste, and once that album (now a days single) cycle is done, it's rinse and repeat. So I wanted to start writing about tracks that I love regardless of genre and when they came out. Good music doesn't have a shelf date and shouldn't just be a race for pageviews and impressions - unique taste used to mean something. As often as I can I will feature ten tracks that are present in my life at that given moment. Most of them will be old, but there will be a new ones here and there. If you have a few minutes, give these a listen, and maybe buy some vinyl. I have provided links to purchase vinyl where I could. #supportbands #supportlabels #supportrecordstores
+<p>Most music publications are being spoonfed the same (mostly) overrated new music, very few have genuinely good taste, and once that album (now a days single) cycle is done, it's rinse and repeat. So I wanted to start writing about tracks that I love regardless of genre and when they came out. Good music doesn't have a shelflife and shouldn't just be a pawn for pageviews and impressions - taste used to actually mean something. As often as I can I will feature ten tracks that are present in my life at that given moment. Most of them will be old, but there will be a new ones here and there. If you have a few minutes, give these a listen, and maybe buy some vinyl. I have provided links to purchase vinyl where I could. #supportbands #supportlabels #supportrecordstores
 </p>
 
 <hr>
